# WindTranslator

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  epub-translator  epub_translator.py  pyproject.toml  requirements.txt  system_prompt.md  translator.yaml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: b48aaf102a6c_add_celery_task_id_to_projects.py  c7e3a1f50d91_add_foreign_key_indexes.py  f34b83fec9f2_initial_tables.py
archive/: epub_translator_v1.py
changlog/: CHANGELOG.md
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: design_architechture.md
scripts/: translate_cli.py
src/epub_translator/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/epub_translator/parser/: __init__.py  base.py  epub.py  pdf.py
src/epub_translator/renderer/: __init__.py  base.py  pdf.py  styles.py
src/epub_translator/translator/: __init__.py  cache.py  llm.py
src/epub_translator/utils/: chapter_range.py
src/server/: config.py  crypto.py  database.py  dependencies.py  main.py  storage.py
src/server/middleware/: error_handler.py  request_log.py
src/server/models/: __init__.py  chapter.py  content_block.py  project.py  translation_config.py
src/server/parser/: __init__.py  epub.py
src/server/renderer/: __init__.py  pdf.py  styles.py
src/server/repositories/: __init__.py  block_repo.py  chapter_repo.py  config_repo.py  project_repo.py
src/server/routers/: config.py  downloads.py  projects.py  translate.py
src/server/schemas/: common.py  project.py  translate.py
src/server/tasks/: __init__.py  celery_app.py  translate.py
tests/: conftest.py  test_chapter_range.py  test_config.py  test_pdf_parser.py  test_pipeline.py  test_translator.py
tests/server/: conftest.py  test_api.py  test_parser.py  test_translator.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
(+31 files in other folders)
